tests/errors/preprocessor/014_branch.c.expect
./tests/errors/preprocessor/014_branch.c:1:8: error: unexpected end-of-file in preprocessor expression
1 | #elifdef
           ^
